force-app/main/default/objects/Opportunity/fields/Amount_Committed__c.field-meta.xml
<CustomField>
    <fullName>Amount_Committed__c</fullName>
    <label>Amount Committed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>