force-app/main/default/objects/Opportunity/fields/Board_Seat_Offered__c.field-meta.xml
<CustomField>
    <fullName>Board_Seat_Offered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Board Seat Offered</label>
    <type>Checkbox</type>
</CustomField>