force-app/main/default/objects/Opportunity/fields/Days_Since_Last_Contact__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Last_Contact__c</fullName>
    <formula>TODAY() - Last_Contact_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Last Contact</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>