force-app/main/default/objects/Opportunity/fields/Funding_Round_Type__c.field-meta.xml
<CustomField>
    <fullName>Funding_Round_Type__c</fullName>
    <label>Funding Round Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Seed</fullName>
            </value>
            <value>
                <fullName>Series A</fullName>
            </value>
            <value>
                <fullName>Series B</fullName>
            </value>
            <value>
                <fullName>Series C</fullName>
            </value>
            <value>
                <fullName>Series D</fullName>
            </value>
            <value>
                <fullName>Bridge</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>