force-app/main/default/objects/Opportunity/fields/Investment_Deck_Version__c.field-meta.xml
<CustomField>
    <fullName>Investment_Deck_Version__c</fullName>
    <label>Investment Deck Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>