force-app/main/default/objects/Opportunity/fields/Investor_Meeting_Count__c.field-meta.xml
<CustomField>
    <fullName>Investor_Meeting_Count__c</fullName>
    <label>Investor Meeting Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>