force-app/main/default/objects/Opportunity/fields/Investor_Sentiment__c.field-meta.xml
<CustomField>
    <fullName>Investor_Sentiment__c</fullName>
    <label>Investor Sentiment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Very Positive</fullName>
            </value>
            <value>
                <fullName>Positive</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Negative</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>