force-app/main/default/objects/Opportunity/fields/Key_Terms__c.field-meta.xml
<CustomField>
    <fullName>Key_Terms__c</fullName>
    <label>Key Terms</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>