force-app/main/default/objects/Opportunity/fields/Lead_Investor__c.field-meta.xml
<CustomField>
    <fullName>Lead_Investor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead Investor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>