force-app/main/default/objects/Opportunity/fields/Next_Milestone__c.field-meta.xml
<CustomField>
    <fullName>Next_Milestone__c</fullName>
    <label>Next Milestone</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Initial Meeting</fullName>
            </value>
            <value>
                <fullName>Pitch</fullName>
            </value>
            <value>
                <fullName>Due Diligence</fullName>
            </value>
            <value>
                <fullName>Term Sheet</fullName>
            </value>
            <value>
                <fullName>Closing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>