force-app/main/default/objects/Opportunity/fields/Probability_Score__c.field-meta.xml
<CustomField>
    <fullName>Probability_Score__c</fullName>
    <label>Probability Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>