force-app/main/default/objects/Opportunity/fields/Target_Amount__c.field-meta.xml
<CustomField>
    <fullName>Target_Amount__c</fullName>
    <label>Target Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>