force-app/main/default/objects/Opportunity/fields/Term_Sheet_Status__c.field-meta.xml
<CustomField>
    <fullName>Term_Sheet_Status__c</fullName>
    <label>Term Sheet Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Sent</fullName>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Under Review</fullName>
            </value>
            <value>
                <fullName>Negotiating</fullName>
            </value>
            <value>
                <fullName>Signed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>