force-app/main/default/objects/Opportunity/fields/Valuation_Post_Money__c.field-meta.xml
<CustomField>
    <fullName>Valuation_Post_Money__c</fullName>
    <formula>Valuation_Pre_Money__c + Amount_Committed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valuation Post-Money</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>