force-app/main/default/objects/Opportunity/fields/Valuation_Pre_Money__c.field-meta.xml
<CustomField>
    <fullName>Valuation_Pre_Money__c</fullName>
    <label>Valuation Pre-Money</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>